# tpa-lab

./: .gitignore  CONFIG.sample.yml  CONFIG.yml  CONFIG_hq.yml  Makefile  README.md  SPECS.md  TODO.md  download_earls_court.py  extract_and_synth.py  extract_policies.py  pyproject.toml  specification.md
examples/: officer_draft_style.md
runs/: .gitkeep
runs/dev/: RUN.yaml  completion.md  prompt.txt  reasoning.json  retrieved.json  section_transport.md
runs/dev2/: RUN.yaml  completion.md  reasoning.json  retrieved.json  section_transport.md
runs/index/: chunks.jsonl
runs/index/indexes/app/: ids.txt  vectors.npy
runs/index/indexes/policy/: ids.txt  vectors.npy
runs/index/indexes/visual/: ids.txt  meta.json  vectors.npy
runs/test_run/: RUN.yaml  completion.md  prompt.txt  reasoning.json  retrieved.json
scripts/: extract_policies.py  pdf_to_pages.py
spec/: sections.yaml
tests/: test_author.py  test_balance.py  test_embed.py  test_llm_google.py  test_material_considerations.py  test_multimodal.py  test_package.py  test_retrieve.py  test_schemas.py  test_smoke.py  test_verify.py
tpa/: __init__.py  author.py  balance.py  chunk_store.py  claims.py  cli.py  config.py  datasets.py  embed.py  evidence.py  judge.py  llm.py  logging.py  material_considerations.py  multimodal.py  package.py  pdf_ingest.py  quant.py  reason.py  rerank.py  retrieve.py  schemas.py  style.py  topics.py  verify.py
tpa/prompts/: design_townscape.yaml  heritage.yaml  transport.yaml
