[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tpa-lab"
version = "0.2.0"
description = "Decision-led officer report pipeline"
authors = [{name = "TPA Lab", email = "dev@tpa.local"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]",
    "PyYAML",
    "PyMuPDF",
    "numpy",
    "httpx",
    "sentence-transformers",
    "rich>=13.0.0",
    # Gemini (google-genai) + retry support
    "google-genai>=0.3.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
tpa = "tpa.cli:app"

[tool.setuptools.packages.find]
include = ["tpa*"]
